--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <div class="form-box">
             <form class= "todo-form" action="">
                 <input class="task-form" type="text" placeholder="Create your task here">
-                <button class="task-form-submit">
-                    <span>BUTTON</span>
+                <button class="btn task-form-submit">
+                    <span class="btn-text-one">Click here</span>
+                    <span class="btn-text-two">Good</span>
                 </button>
             </form>
         </div>
@@ -27,10 +28,11 @@
                 <div class="todo-list">
                     <div class="todo-item">
                         <div class="content">
-                            <input type="text" placeholder="create todo here">
+                            <input class="create-todo" type="text" placeholder="create todo here">
                         </div>
-                        <input type="button" id="edit" value="edit">
-                        <input type="button" id="delete" value="delete">
+                        <input type="button" id="btn edit" value="edit">
+                        <input type="button" id="btn delete"
+                        >
                     </div>
                 </div>
 
