--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
                         <div class="content">
                             <input class="create-todo" type="text" placeholder="create todo here">
                         </div>
-                        <input type="button" id="btn edit" value="edit">
-                        <input type="button" id="btn delete"
-                        >
+                        <button class="edit-btn" type="button">
+                            Edit
+                        </button>
+                        <button class="delete" type="button">
+                            button
+                        </button>
                     </div>
                 </div>
 
