--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 </button>
             </form>
         </div>
+        
+        <!-- starts todo list  -->
+
+
         <section>
             <div class="todo">
                 <h2>Todo List</h2>
