--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h1>Todo Web app</h1>
         <div class="form-box">
             <form class= "todo-form" action="">
-                <input class="task-form" type="text" placeholder="Create your task here">
+                <input class="task-form" type="text" placeholder="Create your todo here">
                 <button class="btn task-form-submit">
-                    <span class="btn-text-one">Click here</span>
-                    <span class="btn-text-two">Good</span>
+                    <span class="btn-text-one">come here to submit</span>
+                    <span class="btn-text-two">Click</span>
                 </button>
             </form>
         </div>
@@ -27,12 +27,11 @@
 
 
         <section>
-            <div class="todo">
+            <div class="todos">
                 <h2>Todo List</h2>
                 <div class="todo-list">
-                    <div class="todo-item">
                         <div class="content">
-                            <input class="create-todo" type="text" placeholder="create todo here">
+                            <input class="create-todo" type="text" placeholder="Todo's">
                         </div>
                         <button class="edit-btn" type="button">
                             Edit
@@ -40,7 +39,6 @@
                         <button class="delete" type="button">
                             button
                         </button>
-                    </div>
                 </div>
 
             </div>
