--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1>Todo Web app</h1>
         <div class="form-box">
             <form class= "todo-form" action="">
-                <input class="task-form" type="text" placeholder="Create your todo here">
-                <button class="btn task-form-submit">
-                    <span class="btn-text-one">come here to submit</span>
+                <input class="form" type="text" placeholder="Create your todo here">
+                <button type="button" class="btn task-form-submit">
+                    <span class="btn-text-one">click here to submit</span>
                     <span class="btn-text-two">Click</span>
                 </button>
             </form>
@@ -30,7 +30,7 @@
             <div class="todos">
                 <h2>Todo List</h2>
                 <div class="todo-list">
-                        <div class="content">
+                        <!-- <div class="content">
                             <input class="create-todo" type="text" placeholder="Todo's">
                         </div>
                         <button class="edit-btn" type="button">
@@ -38,7 +38,7 @@
                         </button>
                         <button class="delete" type="button">
                             button
-                        </button>
+                        </button> -->
                 </div>
 
             </div>
