--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h2>Todo List</h2>
                 <div class="todo-list">
                         <!-- <div class="content">
-                            <input class="create-todo" type="text" placeholder="Todo's">
+                            <input class="create-todo" type="text" placeholder="Todo's" readonly>
                         </div>
                         <button class="edit-btn" type="button">
                             Edit
