type mistake corrected

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="form-box">
             <form class= "todo-form" action="">
                 <input class="form" type="text" placeholder="Create your todo here">
-                <button type="button" class="btn task-form-submit">
+                <button type="submit" class="btn task-form-submit">
                     <span class="btn-text-one">click here to submit</span>
                     <span class="btn-text-two">Click</span>
                 </button>
