placed inside a contentlist

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <h1>Todo Web app</h1>
         <div class="form-box">
-            <form class= "todo-form" action="">
+            <form class= "todo-form">
                 <input class="form" type="text" placeholder="Create your todo here">
                 <button type="submit" class="btn task-form-submit">
                     <span class="btn-text-one">click here to submit</span>
@@ -30,7 +30,8 @@
             <div class="todos">
                 <h2>Todo List</h2>
                 <div class="todo-list">
-                        <!-- <div class="content">
+                    <!-- <div class="content-list">
+                        <div class="content">
                             <input class="create-todo" type="text" placeholder="Todo's" readonly>
                         </div>
                         <button class="edit-btn" type="button">
@@ -38,7 +39,8 @@
                         </button>
                         <button class="delete" type="button">
                             button
-                        </button> -->
+                        </button>
+                    </div> -->
                 </div>
 
             </div>
